[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "build"
]

build-backend = "setuptools.build_meta"

[project]
name = "pydataforgehub"
version = "0.1.0"
description = "PyDataForgeHub automates data quality checks, analysis, and visualization. It simplifies data management workflows and improves accuracy in data-driven projects."
readme = "README.rst"
authors = [
  {name = "Mirwais Farahi", email = "waisfarahi@gmail.com"}
]
maintainers = [
  {name = "Mirwais Farahi", email = "waisfarahi@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "pandas",
  "matplotlib"

]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Mirwais-Farahi/pydataforgehub/issues"
changelog = "https://github.com/Mirwais-Farahi/pydataforgehub/blob/master/changelog.md"
homepage = "https://github.com/Mirwais-Farahi/pydataforgehub"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

